# uv-ipcam

ONVIF_Client/: CMakeLists.txt  readMe.txt
ONVIF_Client/backup/: CMakeLists_buildroot_compile.txt  CMakeLists_cross_compile.txt  CMakeLists_ubuntu_compile.txt
ONVIF_Client/example/: main.cpp
ONVIF_Client/include/: IPCManager.h  OnvifClient.h  duration.h  mecevp.h  onvif.h  smdevp.h  soapDeviceBindingProxy.h  soapMediaBindingProxy.h  soapPTZBindingProxy.h  soapRemoteDiscoveryBindingProxy.h  soapStub.h  stdsoap2.h  threads.h  wsaapi.h  wsseapi.h
ONVIF_Client/src/: IPCManager.cpp  OnvifClient.cpp  dom.cpp  duration.cpp  mecevp.cpp  smdevp.cpp  soapClient.cpp  soapDeviceBindingProxy.cpp  soapMediaBindingProxy.cpp  soapPTZBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.cpp  stdsoap2.cpp  threads.cpp  wsaapi.cpp  wsseapi.cpp
freecad/: IPCAM_38.FCStd  IPCAM_38.dxf
